P4/src/esp_sint.output
Terminales no usados en la gramática

    EXPR_LISTA_IZQ
    EXPR_LISTA_DER
    OP_UN_DELANTE
    OP_BIN_TERN_SEG
    OP_BINARIO
    OP_UNARIO
    OP_UN_BIN
    OP_BINARIO_LISTAS
    OP_TER_LIST


Estado 164 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: CABECERA_PROGRAMA bloque

    2 $@1: ε

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales Declar_de_subprogs Sentencia_opt LLAVE_DER

    4 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    5                   | ε

    6 $@2: ε

    7 Declar_subprog: Cabecera_subprog $@2 bloque

    8 $@3: ε

    9 Declar_de_variables_locales: IVAR $@3 decl_variables FVAR
   10                            | ε

   11 decl_variables: decl_variables lista_variables
   12               | lista_variables

   13 $@4: ε

   14 lista_variables: tipo $@4 lista_ident PYC
   15                | error

   16 lista_ident: lista_ident COMA IDENTIFICADOR
   17            | IDENTIFICADOR
   18            | error

   19 tipo: TIPO_PRIM
   20     | TIPO_LISTA TIPO_PRIM

   21 $@5: ε

   22 Cabecera_subprog: tipo IDENTIFICADOR $@5 PAR_IZQ lista_arg PAR_DER

   23 lista_arg: argumentos
   24          | ε
   25          | error

   26 argumentos: tipo IDENTIFICADOR
   27           | argumentos COMA tipo IDENTIFICADOR

   28 Sentencia_opt: Sentencias
   29              | ε

   30 $@6: ε

   31 Sentencias: Sentencias $@6 Sentencia

   32 $@7: ε

   33 Sentencias: $@7 Sentencia

   34 Sentencia: bloque
   35          | sentencia_if
   36          | sentencia_while
   37          | sentencia_entrada
   38          | sentencia_salida
   39          | sentencia_return
   40          | sentencia_repeat
   41          | sentencia_asignacion
   42          | sentencia_listas
   43          | error

   44 sentencia_entrada: NOMB_ENTRADA lista_variables_entrada PYC

   45 sentencia_salida: NOMB_SALIDA lista_expresiones_o_cadena PYC

   46 sentencia_listas: LISTA_SENT_IZQ IDENTIFICADOR
   47                 | IDENTIFICADOR LISTA_SENT_DER

   48 expresion: OP_UN_NEG expresion
   49          | OP_UN_SHARP expresion
   50          | OP_UN_QUEST expresion
   51          | OP_MAS_MAS expresion
   52          | OP_MENOS_MENOS expresion
   53          | expresion OP_MAS_MENOS expresion
   54          | OP_MAS_MENOS expresion
   55          | expresion OP_BIN_MULTDIV expresion
   56          | expresion OP_LOGICOS_AND expresion
   57          | expresion OP_LOGICOS_OR expresion
   58          | expresion OP_RELACION expresion
   59          | expresion OP_IGUALDAD expresion
   60          | expresion OP_BIN_TERN_PRIM expresion
   61          | expresion OP_MENOS_MENOS expresion
   62          | expresion OP_BIN_TERN_PRIM expresion OP_MAS_MAS expresion
   63          | IDENTIFICADOR
   64          | constante
   65          | lista
   66          | llamada_funcion
   67          | PAR_IZQ expresion PAR_DER
   68          | error

   69 constante: constante_base
   70          | constante_lista

   71 constante_base: CONST_INT
   72               | CONST_FLOAT
   73               | CONST_BOOL
   74               | CONST_CHAR

   75 constante_lista: CORCH_IZQ constante_lista_int CORCH_DER
   76                | CORCH_IZQ constante_lista_float CORCH_DER
   77                | CORCH_IZQ constante_lista_bool CORCH_DER
   78                | CORCH_IZQ constante_lista_char CORCH_DER

   79 constante_lista_int: constante_lista_int COMA CONST_INT
   80                    | CONST_INT

   81 constante_lista_float: constante_lista_float COMA CONST_FLOAT
   82                      | CONST_FLOAT

   83 constante_lista_bool: constante_lista_bool COMA CONST_BOOL
   84                     | CONST_BOOL

   85 constante_lista_char: constante_lista_char COMA CONST_CHAR
   86                     | CONST_CHAR

   87 sentencia_asignacion: IDENTIFICADOR ASIGN expresion PYC

   88 sentencia_if: ID_IF PAR_IZQ expresion PAR_DER Sentencia
   89             | ID_IF PAR_IZQ expresion PAR_DER Sentencia ID_ELSE Sentencia

   90 sentencia_while: ID_WHILE PAR_IZQ expresion PAR_DER Sentencia

   91 sentencia_repeat: ID_REPEAT Sentencia ID_UNTIL PAR_IZQ expresion PAR_DER PYC

   92 @8: ε

   93 sentencia_return: ID_RETURN expresion @8 PYC

   94 lista_variables_entrada: lista_variables_entrada COMA IDENTIFICADOR
   95                        | IDENTIFICADOR
   96                        | lista_variables_entrada error IDENTIFICADOR

   97 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion
   98                           | lista_expresiones_o_cadena COMA CADENA
   99                           | expresion
  100                           | sentencia_listas
  101                           | CADENA

  102 lista: CORCH_IZQ lista_variables_entrada CORCH_DER

  103 llamada_funcion: IDENTIFICADOR PAR_IZQ lista_expresiones PAR_DER

  104 lista_expresiones: lista_expresiones COMA expresion
  105                  | expresion
  106                  | ε


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 15 18 25 43 68 96
    CABECERA_PROGRAMA (258) 1
    TIPO_PRIM (259) 19 20
    TIPO_LISTA (260) 20
    ID_IF (261) 88 89
    ID_ELSE (262) 89
    ID_WHILE (263) 90
    ID_REPEAT (264) 91
    ID_UNTIL (265) 91
    ID_RETURN (266) 93
    NOMB_ENTRADA (267) 44
    NOMB_SALIDA (268) 45
    LISTA_SENT_DER (269) 47
    LISTA_SENT_IZQ (270) 46
    EXPR_LISTA_IZQ (271)
    EXPR_LISTA_DER (272)
    OP_UN_DELANTE (273)
    OP_BIN_TERN_PRIM (274) 60 62
    OP_BIN_TERN_SEG (275)
    OP_BINARIO (276)
    OP_UNARIO (277)
    OP_UN_BIN (278)
    IDENTIFICADOR (279) 16 17 22 26 27 46 47 63 87 94 95 96 103
    CADENA (280) 98 101
    PAR_IZQ (281) 22 67 88 89 90 91 103
    PAR_DER (282) 22 67 88 89 90 91 103
    CORCH_IZQ (283) 75 76 77 78 102
    CORCH_DER (284) 75 76 77 78 102
    LLAVE_IZQ (285) 3
    LLAVE_DER (286) 3
    COMA (287) 16 27 79 81 83 85 94 97 98 104
    PYC (288) 14 44 45 87 91 93
    ASIGN (289) 87
    IVAR (290) 9
    FVAR (291) 9
    OP_BIN_MULTDIV (292) 55
    OP_RELACION (293) 58
    OP_IGUALDAD (294) 59
    OP_LOGICOS_OR (295) 57
    OP_LOGICOS_AND (296) 56
    OP_BINARIO_LISTAS (297)
    OP_TER_LIST (298)
    OP_MAS_MENOS (299) 53 54
    OP_UN_NEG (300) 48
    OP_UN_SHARP (301) 49
    OP_UN_QUEST (302) 50
    OP_MENOS_MENOS (303) 52 61
    OP_MAS_MAS (304) 51 62
    CONST_INT (305) 71 79 80
    CONST_FLOAT (306) 72 81 82
    CONST_BOOL (307) 73 83 84
    CONST_CHAR (308) 74 85 86


No terminales con las reglas donde aparecen

    $accept (54)
        on left: 0
    programa (55)
        on left: 1
        on right: 0
    bloque (56)
        on left: 3
        on right: 1 7 34
    $@1 (57)
        on left: 2
        on right: 3
    Declar_de_subprogs (58)
        on left: 4 5
        on right: 3 4
    Declar_subprog (59)
        on left: 7
        on right: 4
    $@2 (60)
        on left: 6
        on right: 7
    Declar_de_variables_locales (61)
        on left: 9 10
        on right: 3
    $@3 (62)
        on left: 8
        on right: 9
    decl_variables (63)
        on left: 11 12
        on right: 9 11
    lista_variables (64)
        on left: 14 15
        on right: 11 12
    $@4 (65)
        on left: 13
        on right: 14
    lista_ident (66)
        on left: 16 17 18
        on right: 14 16
    tipo (67)
        on left: 19 20
        on right: 14 22 26 27
    Cabecera_subprog (68)
        on left: 22
        on right: 7
    $@5 (69)
        on left: 21
        on right: 22
    lista_arg (70)
        on left: 23 24 25
        on right: 22
    argumentos (71)
        on left: 26 27
        on right: 23 27
    Sentencia_opt (72)
        on left: 28 29
        on right: 3
    Sentencias (73)
        on left: 31 33
        on right: 28 31
    $@6 (74)
        on left: 30
        on right: 31
    $@7 (75)
        on left: 32
        on right: 33
    Sentencia (76)
        on left: 34 35 36 37 38 39 40 41 42 43
        on right: 31 33 88 89 90 91
    sentencia_entrada (77)
        on left: 44
        on right: 37
    sentencia_salida (78)
        on left: 45
        on right: 38
    sentencia_listas (79)
        on left: 46 47
        on right: 42 100
    expresion (80)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 67 87 88 89 90 91 93 97 99 104 105
    constante (81)
        on left: 69 70
        on right: 64
    constante_base (82)
        on left: 71 72 73 74
        on right: 69
    constante_lista (83)
        on left: 75 76 77 78
        on right: 70
    constante_lista_int (84)
        on left: 79 80
        on right: 75 79
    constante_lista_float (85)
        on left: 81 82
        on right: 76 81
    constante_lista_bool (86)
        on left: 83 84
        on right: 77 83
    constante_lista_char (87)
        on left: 85 86
        on right: 78 85
    sentencia_asignacion (88)
        on left: 87
        on right: 41
    sentencia_if (89)
        on left: 88 89
        on right: 35
    sentencia_while (90)
        on left: 90
        on right: 36
    sentencia_repeat (91)
        on left: 91
        on right: 40
    sentencia_return (92)
        on left: 93
        on right: 39
    @8 (93)
        on left: 92
        on right: 93
    lista_variables_entrada (94)
        on left: 94 95 96
        on right: 44 94 96 102
    lista_expresiones_o_cadena (95)
        on left: 97 98 99 100 101
        on right: 45 97 98
    lista (96)
        on left: 102
        on right: 65
    llamada_funcion (97)
        on left: 103
        on right: 66
    lista_expresiones (98)
        on left: 104 105 106
        on right: 103 104


Estado 0

    0 $accept: • programa $end

    CABECERA_PROGRAMA  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: CABECERA_PROGRAMA • bloque

    LLAVE_IZQ  desplazar e ir al estado 3

    bloque  ir al estado 4


Estado 2

    0 $accept: programa • $end

    $end  desplazar e ir al estado 5


Estado 3

    3 bloque: LLAVE_IZQ • $@1 Declar_de_variables_locales Declar_de_subprogs Sentencia_opt LLAVE_DER

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 6


Estado 4

    1 programa: CABECERA_PROGRAMA bloque •

    $default  reduce usando la regla 1 (programa)


Estado 5

    0 $accept: programa $end •

    $default  aceptar


Estado 6

    3 bloque: LLAVE_IZQ $@1 • Declar_de_variables_locales Declar_de_subprogs Sentencia_opt LLAVE_DER

    IVAR  desplazar e ir al estado 7

    $default  reduce usando la regla 10 (Declar_de_variables_locales)

    Declar_de_variables_locales  ir al estado 8


Estado 7

    9 Declar_de_variables_locales: IVAR • $@3 decl_variables FVAR

    $default  reduce usando la regla 8 ($@3)

    $@3  ir al estado 9


Estado 8

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales • Declar_de_subprogs Sentencia_opt LLAVE_DER

    $default  reduce usando la regla 5 (Declar_de_subprogs)

    Declar_de_subprogs  ir al estado 10


Estado 9

    9 Declar_de_variables_locales: IVAR $@3 • decl_variables FVAR

    error       desplazar e ir al estado 11
    TIPO_PRIM   desplazar e ir al estado 12
    TIPO_LISTA  desplazar e ir al estado 13

    decl_variables   ir al estado 14
    lista_variables  ir al estado 15
    tipo             ir al estado 16


Estado 10

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales Declar_de_subprogs • Sentencia_opt LLAVE_DER
    4 Declar_de_subprogs: Declar_de_subprogs • Declar_subprog

    TIPO_PRIM   desplazar e ir al estado 12
    TIPO_LISTA  desplazar e ir al estado 13

    LLAVE_DER  reduce usando la regla 29 (Sentencia_opt)
    $default   reduce usando la regla 32 ($@7)

    Declar_subprog    ir al estado 17
    tipo              ir al estado 18
    Cabecera_subprog  ir al estado 19
    Sentencia_opt     ir al estado 20
    Sentencias        ir al estado 21
    $@7               ir al estado 22


Estado 11

   15 lista_variables: error •

    $default  reduce usando la regla 15 (lista_variables)


Estado 12

   19 tipo: TIPO_PRIM •

    $default  reduce usando la regla 19 (tipo)


Estado 13

   20 tipo: TIPO_LISTA • TIPO_PRIM

    TIPO_PRIM  desplazar e ir al estado 23


Estado 14

    9 Declar_de_variables_locales: IVAR $@3 decl_variables • FVAR
   11 decl_variables: decl_variables • lista_variables

    error       desplazar e ir al estado 11
    TIPO_PRIM   desplazar e ir al estado 12
    TIPO_LISTA  desplazar e ir al estado 13
    FVAR        desplazar e ir al estado 24

    lista_variables  ir al estado 25
    tipo             ir al estado 16


Estado 15

   12 decl_variables: lista_variables •

    $default  reduce usando la regla 12 (decl_variables)


Estado 16

   14 lista_variables: tipo • $@4 lista_ident PYC

    $default  reduce usando la regla 13 ($@4)

    $@4  ir al estado 26


Estado 17

    4 Declar_de_subprogs: Declar_de_subprogs Declar_subprog •

    $default  reduce usando la regla 4 (Declar_de_subprogs)


Estado 18

   22 Cabecera_subprog: tipo • IDENTIFICADOR $@5 PAR_IZQ lista_arg PAR_DER

    IDENTIFICADOR  desplazar e ir al estado 27


Estado 19

    7 Declar_subprog: Cabecera_subprog • $@2 bloque

    $default  reduce usando la regla 6 ($@2)

    $@2  ir al estado 28


Estado 20

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales Declar_de_subprogs Sentencia_opt • LLAVE_DER

    LLAVE_DER  desplazar e ir al estado 29


Estado 21

   28 Sentencia_opt: Sentencias •
   31 Sentencias: Sentencias • $@6 Sentencia

    LLAVE_DER  reduce usando la regla 28 (Sentencia_opt)
    $default   reduce usando la regla 30 ($@6)

    $@6  ir al estado 30


Estado 22

   33 Sentencias: $@7 • Sentencia

    error           desplazar e ir al estado 31
    ID_IF           desplazar e ir al estado 32
    ID_WHILE        desplazar e ir al estado 33
    ID_REPEAT       desplazar e ir al estado 34
    ID_RETURN       desplazar e ir al estado 35
    NOMB_ENTRADA    desplazar e ir al estado 36
    NOMB_SALIDA     desplazar e ir al estado 37
    LISTA_SENT_IZQ  desplazar e ir al estado 38
    IDENTIFICADOR   desplazar e ir al estado 39
    LLAVE_IZQ       desplazar e ir al estado 3

    bloque                ir al estado 40
    Sentencia             ir al estado 41
    sentencia_entrada     ir al estado 42
    sentencia_salida      ir al estado 43
    sentencia_listas      ir al estado 44
    sentencia_asignacion  ir al estado 45
    sentencia_if          ir al estado 46
    sentencia_while       ir al estado 47
    sentencia_repeat      ir al estado 48
    sentencia_return      ir al estado 49


Estado 23

   20 tipo: TIPO_LISTA TIPO_PRIM •

    $default  reduce usando la regla 20 (tipo)


Estado 24

    9 Declar_de_variables_locales: IVAR $@3 decl_variables FVAR •

    $default  reduce usando la regla 9 (Declar_de_variables_locales)


Estado 25

   11 decl_variables: decl_variables lista_variables •

    $default  reduce usando la regla 11 (decl_variables)


Estado 26

   14 lista_variables: tipo $@4 • lista_ident PYC

    error          desplazar e ir al estado 50
    IDENTIFICADOR  desplazar e ir al estado 51

    lista_ident  ir al estado 52


Estado 27

   22 Cabecera_subprog: tipo IDENTIFICADOR • $@5 PAR_IZQ lista_arg PAR_DER

    $default  reduce usando la regla 21 ($@5)

    $@5  ir al estado 53


Estado 28

    7 Declar_subprog: Cabecera_subprog $@2 • bloque

    LLAVE_IZQ  desplazar e ir al estado 3

    bloque  ir al estado 54


Estado 29

    3 bloque: LLAVE_IZQ $@1 Declar_de_variables_locales Declar_de_subprogs Sentencia_opt LLAVE_DER •

    $default  reduce usando la regla 3 (bloque)


Estado 30

   31 Sentencias: Sentencias $@6 • Sentencia

    error           desplazar e ir al estado 31
    ID_IF           desplazar e ir al estado 32
    ID_WHILE        desplazar e ir al estado 33
    ID_REPEAT       desplazar e ir al estado 34
    ID_RETURN       desplazar e ir al estado 35
    NOMB_ENTRADA    desplazar e ir al estado 36
    NOMB_SALIDA     desplazar e ir al estado 37
    LISTA_SENT_IZQ  desplazar e ir al estado 38
    IDENTIFICADOR   desplazar e ir al estado 39
    LLAVE_IZQ       desplazar e ir al estado 3

    bloque                ir al estado 40
    Sentencia             ir al estado 55
    sentencia_entrada     ir al estado 42
    sentencia_salida      ir al estado 43
    sentencia_listas      ir al estado 44
    sentencia_asignacion  ir al estado 45
    sentencia_if          ir al estado 46
    sentencia_while       ir al estado 47
    sentencia_repeat      ir al estado 48
    sentencia_return      ir al estado 49


Estado 31

   43 Sentencia: error •

    $default  reduce usando la regla 43 (Sentencia)


Estado 32

   88 sentencia_if: ID_IF • PAR_IZQ expresion PAR_DER Sentencia
   89             | ID_IF • PAR_IZQ expresion PAR_DER Sentencia ID_ELSE Sentencia

    PAR_IZQ  desplazar e ir al estado 56


Estado 33

   90 sentencia_while: ID_WHILE • PAR_IZQ expresion PAR_DER Sentencia

    PAR_IZQ  desplazar e ir al estado 57


Estado 34

   91 sentencia_repeat: ID_REPEAT • Sentencia ID_UNTIL PAR_IZQ expresion PAR_DER PYC

    error           desplazar e ir al estado 31
    ID_IF           desplazar e ir al estado 32
    ID_WHILE        desplazar e ir al estado 33
    ID_REPEAT       desplazar e ir al estado 34
    ID_RETURN       desplazar e ir al estado 35
    NOMB_ENTRADA    desplazar e ir al estado 36
    NOMB_SALIDA     desplazar e ir al estado 37
    LISTA_SENT_IZQ  desplazar e ir al estado 38
    IDENTIFICADOR   desplazar e ir al estado 39
    LLAVE_IZQ       desplazar e ir al estado 3

    bloque                ir al estado 40
    Sentencia             ir al estado 58
    sentencia_entrada     ir al estado 42
    sentencia_salida      ir al estado 43
    sentencia_listas      ir al estado 44
    sentencia_asignacion  ir al estado 45
    sentencia_if          ir al estado 46
    sentencia_while       ir al estado 47
    sentencia_repeat      ir al estado 48
    sentencia_return      ir al estado 49


Estado 35

   93 sentencia_return: ID_RETURN • expresion @8 PYC

    error           desplazar e ir al estado 59
    IDENTIFICADOR   desplazar e ir al estado 60
    PAR_IZQ         desplazar e ir al estado 61
    CORCH_IZQ       desplazar e ir al estado 62
    OP_MAS_MENOS    desplazar e ir al estado 63
    OP_UN_NEG       desplazar e ir al estado 64
    OP_UN_SHARP     desplazar e ir al estado 65
    OP_UN_QUEST     desplazar e ir al estado 66
    OP_MENOS_MENOS  desplazar e ir al estado 67
    OP_MAS_MAS      desplazar e ir al estado 68
    CONST_INT       desplazar e ir al estado 69
    CONST_FLOAT     desplazar e ir al estado 70
    CONST_BOOL      desplazar e ir al estado 71
    CONST_CHAR      desplazar e ir al estado 72

    expresion        ir al estado 73
    constante        ir al estado 74
    constante_base   ir al estado 75
    constante_lista  ir al estado 76
    lista            ir al estado 77
    llamada_funcion  ir al estado 78


Estado 36

   44 sentencia_entrada: NOMB_ENTRADA • lista_variables_entrada PYC

    IDENTIFICADOR  desplazar e ir al estado 79

    lista_variables_entrada  ir al estado 80


Estado 37

   45 sentencia_salida: NOMB_SALIDA • lista_expresiones_o_cadena PYC

    error           desplazar e ir al estado 59
    LISTA_SENT_IZQ  desplazar e ir al estado 38
    IDENTIFICADOR   desplazar e ir al estado 81
    CADENA          desplazar e ir al estado 82
    PAR_IZQ         desplazar e ir al estado 61
    CORCH_IZQ       desplazar e ir al estado 62
    OP_MAS_MENOS    desplazar e ir al estado 63
    OP_UN_NEG       desplazar e ir al estado 64
    OP_UN_SHARP     desplazar e ir al estado 65
    OP_UN_QUEST     desplazar e ir al estado 66
    OP_MENOS_MENOS  desplazar e ir al estado 67
    OP_MAS_MAS      desplazar e ir al estado 68
    CONST_INT       desplazar e ir al estado 69
    CONST_FLOAT     desplazar e ir al estado 70
    CONST_BOOL      desplazar e ir al estado 71
    CONST_CHAR      desplazar e ir al estado 72

    sentencia_listas            ir al estado 83
    expresion                   ir al estado 84
    constante                   ir al estado 74
    constante_base              ir al estado 75
    constante_lista             ir al estado 76
    lista_expresiones_o_cadena  ir al estado 85
    lista                       ir al estado 77
    llamada_funcion             ir al estado 78


Estado 38

   46 sentencia_listas: LISTA_SENT_IZQ • IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 86


Estado 39

   47 sentencia_listas: IDENTIFICADOR • LISTA_SENT_DER
   87 sentencia_asignacion: IDENTIFICADOR • ASIGN expresion PYC

    LISTA_SENT_DER  desplazar e ir al estado 87
    ASIGN           desplazar e ir al estado 88


Estado 40

   34 Sentencia: bloque •

    $default  reduce usando la regla 34 (Sentencia)


Estado 41

   33 Sentencias: $@7 Sentencia •

    $default  reduce usando la regla 33 (Sentencias)


Estado 42

   37 Sentencia: sentencia_entrada •

    $default  reduce usando la regla 37 (Sentencia)


Estado 43

   38 Sentencia: sentencia_salida •

    $default  reduce usando la regla 38 (Sentencia)


Estado 44

   42 Sentencia: sentencia_listas •

    $default  reduce usando la regla 42 (Sentencia)


Estado 45

   41 Sentencia: sentencia_asignacion •

    $default  reduce usando la regla 41 (Sentencia)


Estado 46

   35 Sentencia: sentencia_if •

    $default  reduce usando la regla 35 (Sentencia)


Estado 47

   36 Sentencia: sentencia_while •

    $default  reduce usando la regla 36 (Sentencia)


Estado 48

   40 Sentencia: sentencia_repeat •

    $default  reduce usando la regla 40 (Sentencia)


Estado 49

   39 Sentencia: sentencia_return •

    $default  reduce usando la regla 39 (Sentencia)


Estado 50

   18 lista_ident: error •

    $default  reduce usando la regla 18 (lista_ident)


Estado 51

   17 lista_ident: IDENTIFICADOR •

    $default  reduce usando la regla 17 (lista_ident)


Estado 52

   14 lista_variables: tipo $@4 lista_ident • PYC
   16 lista_ident: lista_ident • COMA IDENTIFICADOR

    COMA  desplazar e ir al estado 89
    PYC   desplazar e ir al estado 90


Estado 53

   22 Cabecera_subprog: tipo IDENTIFICADOR $@5 • PAR_IZQ lista_arg PAR_DER

    PAR_IZQ  desplazar e ir al estado 91


Estado 54

    7 Declar_subprog: Cabecera_subprog $@2 bloque •

    $default  reduce usando la regla 7 (Declar_subprog)


Estado 55

   31 Sentencias: Sentencias $@6 Sentencia •

    $default  reduce usando la regla 31 (Sentencias)


Estado 56

   88 sentencia_if: ID_IF PAR_IZQ • expresion PAR_DER Sentencia
   89             | ID_IF PAR_IZQ • expresion PAR_DER Sentencia ID_ELSE Sentencia

    error           desplazar e ir al estado 59
    IDENTIFICADOR   desplazar e ir al estado 60
    PAR_IZQ         desplazar e ir al estado 61
    CORCH_IZQ       desplazar e ir al estado 62
    OP_MAS_MENOS    desplazar e ir al estado 63
    OP_UN_NEG       desplazar e ir al estado 64
    OP_UN_SHARP     desplazar e ir al estado 65
    OP_UN_QUEST     desplazar e ir al estado 66
    OP_MENOS_MENOS  desplazar e ir al estado 67
    OP_MAS_MAS      desplazar e ir al estado 68
    CONST_INT       desplazar e ir al estado 69
    CONST_FLOAT     desplazar e ir al estado 70
    CONST_BOOL      desplazar e ir al estado 71
    CONST_CHAR      desplazar e ir al estado 72

    expresion        ir al estado 92
    constante        ir al estado 74
    constante_base   ir al estado 75
    constante_lista  ir al estado 76
    lista            ir al estado 77
    llamada_funcion  ir al estado 78


Estado 57

   90 sentencia_while: ID_WHILE PAR_IZQ • expresion PAR_DER Sentencia

    error           desplazar e ir al estado 59
    IDENTIFICADOR   desplazar e ir al estado 60
    PAR_IZQ         desplazar e ir al estado 61
    CORCH_IZQ       desplazar e ir al estado 62
    OP_MAS_MENOS    desplazar e ir al estado 63
    OP_UN_NEG       desplazar e ir al estado 64
    OP_UN_SHARP     desplazar e ir al estado 65
    OP_UN_QUEST     desplazar e ir al estado 66
    OP_MENOS_MENOS  desplazar e ir al estado 67
    OP_MAS_MAS      desplazar e ir al estado 68
    CONST_INT       desplazar e ir al estado 69
    CONST_FLOAT     desplazar e ir al estado 70
    CONST_BOOL      desplazar e ir al estado 71
    CONST_CHAR      desplazar e ir al estado 72

    expresion        ir al estado 93
    constante        ir al estado 74
    constante_base   ir al estado 75
    constante_lista  ir al estado 76
    lista            ir al estado 77
    llamada_funcion  ir al estado 78


Estado 58

   91 sentencia_repeat: ID_REPEAT Sentencia • ID_UNTIL PAR_IZQ expresion PAR_DER PYC

    ID_UNTIL  desplazar e ir al estado 94


Estado 59

   68 expresion: error •

    $default  reduce usando la regla 68 (expresion)


Estado 60

   63 expresion: IDENTIFICADOR •
  103 llamada_funcion: IDENTIFICADOR • PAR_IZQ lista_expresiones PAR_DER

    PAR_IZQ  desplazar e ir al estado 95

    $default  reduce usando la regla 63 (expresion)


Estado 61

   67 expresion: PAR_IZQ • expresion PAR_DER

    error           desplazar e ir al estado 59
    IDENTIFICADOR   desplazar e ir al estado 60
    PAR_IZQ         desplazar e ir al estado 61
    CORCH_IZQ       desplazar e ir al estado 62
    OP_MAS_MENOS    desplazar e ir al estado 63
    OP_UN_NEG       desplazar e ir al estado 64
    OP_UN_SHARP     desplazar e ir al estado 65
    OP_UN_QUEST     desplazar e ir al estado 66
    OP_MENOS_MENOS  desplazar e ir al estado 67
    OP_MAS_MAS      desplazar e ir al estado 68
    CONST_INT       desplazar e ir al estado 69
    CONST_FLOAT     desplazar e ir al estado 70
    CONST_BOOL      desplazar e ir al estado 71
    CONST_CHAR      desplazar e ir al estado 72

    expresion        ir al estado 96
    constante        ir al estado 74
    constante_base   ir al estado 75
    constante_lista  ir al estado 76
    lista            ir al estado 77
    llamada_funcion  ir al estado 78


Estado 62

   75 constante_lista: CORCH_IZQ • constante_lista_int CORCH_DER
   76                | CORCH_IZQ • constante_lista_float CORCH_DER
   77                | CORCH_IZQ • constante_lista_bool CORCH_DER
   78                | CORCH_IZQ • constante_lista_char CORCH_DER
  102 lista: CORCH_IZQ • lista_variables_entrada CORCH_DER

    IDENTIFICADOR  desplazar e ir al estado 79
    CONST_INT      desplazar e ir al estado 97
    CONST_FLOAT    desplazar e ir al estado 98
    CONST_BOOL     desplazar e ir al estado 99
    CONST_CHAR     desplazar e ir al estado 100

    constante_lista_int      ir al estado 101
    constante_lista_float    ir al estado 102
    constante_lista_bool     ir al estado 103
    constante_lista_char     ir al estado 104
    lista_variables_entrada  ir al estado 105


Estado 63

   54 expresion: OP_MAS_MENOS • expresion

    error           desplazar e ir al estado 59
    IDENTIFICADOR   desplazar e ir al estado 60
    PAR_IZQ         desplazar e ir al estado 61
    CORCH_IZQ       desplazar e ir al estado 62
    OP_MAS_MENOS    desplazar e ir al estado 63
    OP_UN_NEG       desplazar e ir al estado 64
    OP_UN_SHARP     desplazar e ir al estado 65
    OP_UN_QUEST     desplazar e ir al estado 66
    OP_MENOS_MENOS  desplazar e ir al estado 67
    OP_MAS_MAS      desplazar e ir al estado 68
    CONST_INT       desplazar e ir al estado 69
    CONST_FLOAT     desplazar e ir al estado 70
    CONST_BOOL      desplazar e ir al estado 71
    CONST_CHAR      desplazar e ir al estado 72

    expresion        ir al estado 106
    constante        ir al estado 74
    constante_base   ir al estado 75
    constante_lista  ir al estado 76
    lista            ir al estado 77
    llamada_funcion  ir al estado 78


Estado 64

   48 expresion: OP_UN_NEG • expresion

    error           desplazar e ir al estado 59
    IDENTIFICADOR   desplazar e ir al estado 60
    PAR_IZQ         desplazar e ir al estado 61
    CORCH_IZQ       desplazar e ir al estado 62
    OP_MAS_MENOS    desplazar e ir al estado 63
    OP_UN_NEG       desplazar e ir al estado 64
    OP_UN_SHARP     desplazar e ir al estado 65
    OP_UN_QUEST     desplazar e ir al estado 66
    OP_MENOS_MENOS  desplazar e ir al estado 67
    OP_MAS_MAS      desplazar e ir al estado 68
    CONST_INT       desplazar e ir al estado 69
    CONST_FLOAT     desplazar e ir al estado 70
    CONST_BOOL      desplazar e ir al estado 71
    CONST_CHAR      desplazar e ir al estado 72

    expresion        ir al estado 107
    constante        ir al estado 74
    constante_base   ir al estado 75
    constante_lista  ir al estado 76
    lista            ir al estado 77
    llamada_funcion  ir al estado 78


Estado 65

   49 expresion: OP_UN_SHARP • expresion

    error           desplazar e ir al estado 59
    IDENTIFICADOR   desplazar e ir al estado 60
    PAR_IZQ         desplazar e ir al estado 61
    CORCH_IZQ       desplazar e ir al estado 62
    OP_MAS_MENOS    desplazar e ir al estado 63
    OP_UN_NEG       desplazar e ir al estado 64
    OP_UN_SHARP     desplazar e ir al estado 65
    OP_UN_QUEST     desplazar e ir al estado 66
    OP_MENOS_MENOS  desplazar e ir al estado 67
    OP_MAS_MAS      desplazar e ir al estado 68
    CONST_INT       desplazar e ir al estado 69
    CONST_FLOAT     desplazar e ir al estado 70
    CONST_BOOL      desplazar e ir al estado 71
    CONST_CHAR      desplazar e ir al estado 72

    expresion        ir al estado 108
    constante        ir al estado 74
    constante_base   ir al estado 75
    constante_lista  ir al estado 76
    lista            ir al estado 77
    llamada_funcion  ir al estado 78


Estado 66

   50 expresion: OP_UN_QUEST • expresion

    error           desplazar e ir al estado 59
    IDENTIFICADOR   desplazar e ir al estado 60
    PAR_IZQ         desplazar e ir al estado 61
    CORCH_IZQ       desplazar e ir al estado 62
    OP_MAS_MENOS    desplazar e ir al estado 63
    OP_UN_NEG       desplazar e ir al estado 64
    OP_UN_SHARP     desplazar e ir al estado 65
    OP_UN_QUEST     desplazar e ir al estado 66
    OP_MENOS_MENOS  desplazar e ir al estado 67
    OP_MAS_MAS      desplazar e ir al estado 68
    CONST_INT       desplazar e ir al estado 69
    CONST_FLOAT     desplazar e ir al estado 70
    CONST_BOOL      desplazar e ir al estado 71
    CONST_CHAR      desplazar e ir al estado 72

    expresion        ir al estado 109
    constante        ir al estado 74
    constante_base   ir al estado 75
    constante_lista  ir al estado 76
    lista            ir al estado 77
    llamada_funcion  ir al estado 78


Estado 67

   52 expresion: OP_MENOS_MENOS • expresion
